# Lumen

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README-zh-CN.md  README.md  sdkconfig
.github/workflows/: build.yml  release.yml
assets/bdfconv/: .gitignore  Makefile
components/ina226/: .component_hash  .gitignore  CHECKSUMS.json  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/ina226/examples/ina226-example/: CMakeLists.txt
components/ina226/examples/ina226-example/main/: CMakeLists.txt  idf_component.yml  ina226-example.cpp
components/ina226/interface/: ina226_interface.cpp  ina226_interface.h
components/ina226/src/: ina226_driver.cpp  ina226_driver.h
components/vision-ui/: CMakeLists.txt  vision_ui_lib.h
docs/: quick-start-zh-CN.md  quick-start.md
feature/mc_mod/: build.gradle
feature/mc_mod/src/client/java/com/robcholz/lumen/: LumenSyncServer.java  LumenSyncState.java
feature/mc_mod/src/client/java/com/robcholz/lumen/client/: LumenClient.java
feature/mc_mod/src/client/java/com/robcholz/lumen/client/config/: LumenConfigScreen.java
feature/mc_mod/src/main/resources/: fabric.mod.json
hardware/: README.md  bom.csv  pickandplace.csv
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/include/: buzzer.hpp  current_sensor.hpp  display.hpp  efuse.hpp  encoder.hpp  i2c_bus.hpp  motion.hpp  out_control.hpp  pins.hpp  serial_pack.hpp
main/main_app/: CMakeLists.txt  Cargo.toml  rust-toolchain.toml
main/main_app/.cargo/: config.toml
main/main_app/src/: ffi.rs  lib.rs
main/src/: efuse.cpp  i2c_bus.cpp  motion.cpp  serial_pack.cpp  ui_assets_provider.cpp  ui_hardware_driver.cpp  ui_primitive_driver.cpp
script/: display_skin_payload.py  logo.py  png_to_rgb565_c.py  serial_pack_send.py
structure/: README.md  bottom-shell.stl  light-guide.ai  side-shell.stl  top-cover.ai
